[project]
name = "md-nucleation"
version = "0.1.0"
description = "An lightweight MD simulator for identifying conditions for nucleation."
readme = "README.md"
authors = [
    { name = "Andrew K.", email = "andrewkim@princeton.edu" },
    { name = "Chinmay S.", email = "chinmays@princeton.edu"},
    { name = "Xiewei P.", email = "xp9583@princeton.edu"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "scipy>=1.10.0,<2.0.0",
    "typer>=0.9.0,<1.0.0",
]

[project.scripts]
md-nucleation = "md_nucleation:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
ignore = [
    "E722",  # bare except
    "E741",  # ambiguous variable name
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
venvPath = "."
venv = ".venv"
reportAssignmentType = "none"
